<resources>
    <string name="app_name" translatable="false">My Wether APP</string>
    <string name="logoText" translatable="false">Погода в вашому місті</string>
    <string name="hint_user_field" translatable="false">Ведіть місто</string>
    <string name="main_button" translatable="false">Дізнатись погоду</string>
    <string name="no_user_input" translatable="false">Ви не вели текст</string>
    <string name="Rain" translatable="false">Температура</string>
    <string name="Wind_Spead" translatable="false">вітер</string>
    <string name="Humidity" translatable="false">вологість</string>
    <string name="timTemp" translatable="false">відчувається як</string>
    <string name="Show" translatable="false">Видимість</string>
    <string name="Tis" translatable="false">Очікується</string>

    <string name="dayFor" translatable="false">6-денний прогноз</string>
    <string name="maxdayTemp" translatable="false">Макc</string>
    <string name="mindayTemp" translatable="false">Мін</string>
    <string name="MeybyWeather" translatable="false">очікується</string>
    <string name="Dataday" translatable="false">Дата</string>
    <string name="button2" translatable="false">Дізнатись погоду на 5 днів </string>
    <string name="hourly_forecast" translatable="false">огляд по годинам</string>
    <string-array name="city_list">
        <item>Київ</item>
        <item>Львів</item>
        <item>Харків</item>
        <item>Стрий</item>
        <item>Добряни</item>
        <item>Миколаїв</item>
        <item>Дніпро</item>
        <!-- Додайте інші міста -->
    </string-array>


</resources>