<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_2"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_2"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="326dp"
            android:layout_height="146dp"
            android:layout_below="@id/main_button"
            android:layout_marginVertical="50sp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@color/colorAccent"
            android:baselineAligned="true"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.33"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/res_temp"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/Rain"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Rain"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind" />

                <TextView
                    android:id="@+id/res_winter"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Wind_Spead"
                    android:textAlignment="center"

                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/umbrella" />

                <TextView
                    android:id="@+id/res_Humidity"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Humidity"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50sp"
            android:background="@color/colorAccent"
            android:fontFamily="monospace"
            android:text="@string/logoText"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="190dp"
            android:layout_height="71dp"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/cloudy1" />

        <EditText
            android:id="@+id/user_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="100sp"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:hint="@string/hint_user_field"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/TextColor"
            android:textColorHint="@color/textColorHint" />

        <Button
            android:id="@+id/main_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_field"
            android:layout_marginHorizontal="110sp"
            android:layout_marginTop="20sp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="monospace"
            android:text="@string/main_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="147dp"
            android:layout_marginVertical="520sp"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@color/colorAccent"
            android:baselineAligned="true"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.33"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/Imag2"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:src="@drawable/humidity" />

                <TextView
                    android:id="@+id/res_timeTemp"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/timTemp"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:gravity="center_horizontal"
                    android:text="@string/timTemp"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Image3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/wind" />

                <TextView
                    android:id="@+id/res_Show"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/Show"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Show"
                    android:textAlignment="center"

                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.33"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Image4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/umbrella" />

                <TextView
                    android:id="@+id/res_Tis"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/Tis"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Tis"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/res_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:textAlignment="center"
            android:textColor="@color/TextColor"
            android:textColorHint="@color/textColorHint" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="700sp"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/dayfor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/dayFor"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                >

                <TextView
                    android:id="@+id/dataday0"
                    android:text="@string/Dataday"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/dataday1"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/dataday2"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/dataday3"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/dataday4"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/dataday5"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </TableRow>

            <TableRow
                android:id="@+id/table2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/maxdayTemp"
                    android:text="@string/maxdayTemp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maxday1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/maxday2"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/maxday3"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/maxday4"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/maxday5"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/textView2"
                    android:text="@string/mindayTemp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/day01"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/day02"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/day03"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/day04"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/day05"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>